--- a/pom.xml
+++ b/pom.xml
@@ -7,14 +7,33 @@
   <groupId>org.neonsis</groupId>
   <artifactId>memcached</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <modules>
+    <module>memcached-common</module>
+  </modules>
 
   <name>memcached</name>
 
-  <packaging>jar</packaging>
+  <packaging>pom</packaging>
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <java.version>1.8</java.version>
   </properties>
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.5.1</version>
+          <configuration>
+            <source>${java.version}</source>
+            <target>${java.version}</target>
+          </configuration>
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build>
 
 </project>
