--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>memcached-common</module>
+        <module>memcached-client</module>
     </modules>
 
     <name>memcached</name>
