--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
     <modules>
         <module>memcached-common</module>
         <module>memcached-client</module>
+        <module>memcached-server</module>
     </modules>
 
     <name>memcached</name>
@@ -22,6 +23,7 @@
         <junit.version>4.12</junit.version>
         <mockito.version>2.28.2</mockito.version>
         <commons-lang.version>3.11</commons-lang.version>
+        <logback.version>1.2.3</logback.version>
     </properties>
 
     <dependencies>
